--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proxy-chain",
+  "name": "@asendia/proxy-chain",
   "version": "0.1.31",
   "description": "Node.js implementation of a proxy server (think Squid) with support for SSL, authentication, upstream proxy chaining, and protocol tunneling.",
   "main": "build/index.js",
