--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  presets: ["es2015", "stage-0"]
+  "presets": [
+    ["@babel/preset-env", {
+      "targets": {
+        "node": "8.10"
+      }
+    }]
+  ]
 }
