--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asendia/proxy-chain",
-  "version": "0.1.31",
+  "version": "0.2.31",
   "description": "Node.js implementation of a proxy server (think Squid) with support for SSL, authentication, upstream proxy chaining, and protocol tunneling.",
   "main": "build/index.js",
   "keywords": [
@@ -32,23 +32,20 @@
   "scripts": {
     "build": "rm -rf ./build && babel src --out-dir build",
     "local-proxy": "npm run build && node ./build/run_locally.js",
-    "test": "npm run build && mocha --compilers js:babel-core/register --recursive",
-    "prepare": "npm run build",
+    "test": "npm run build && mocha --compilers js:@babel/register --recursive",
     "prepublishOnly": "(test $RUNNING_FROM_SCRIPT || (echo \"You must use publish.sh instead of 'npm publish' directly!\"; exit 1)) && npm test && npm run lint",
+    "prepare": "npm run build",
     "clean": "rm -rf build",
     "lint": "npm run build && eslint src"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "portastic": "^1.0.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.1.21",
-    "babel-eslint": "^7.2.2",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
+    "@babel/cli": "^7.0.0-beta.49",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/register": "^7.0.0-beta.49",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.2",
     "chai": "^4.0.2",
